Updates code due to changes on gryonline website